feat: ProductInfo 및 UpdateProductCommand 제거